--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="appbar">#33DBBCBC</color>
+    <color name="soft_orange">#ffcc66</color>
+    <color name="transparent">#00000000</color>
+    <array name="gradient">
+        <item>#ffff00</item>
+        <item>#ffff66</item>
+        <item>#ffff99</item>
+        <item>#ffffcc</item>
+        <item>#ffffff</item>
+    </array>
 </resources>
