--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+
+
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="appbar">#33DBBCBC</color>
-    <color name="soft_orange">#ffcc66</color>
+    <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="appbar">#1A6200EE</color>
+    <color name="soft_orange">#ffcc66</color>
+    <color name="red">#ff0000</color>
+    <color name="blue">#0066ff</color>
+
     <array name="gradient">
         <item>#ffff00</item>
         <item>#ffff66</item>
         <item>#ffff99</item>
         <item>#ffffcc</item>
+        <item>#ffffff</item>
+    </array>
+    <array name="purple_gradient">
+        <item>#c266ff</item>
+        <item>#cc80ff</item>
+        <item>#d699ff</item>
+        <item>#e0b3ff</item>
+        <item>#ebccff</item>
+        <item>#f5e6ff</item>
         <item>#ffffff</item>
     </array>
 </resources>
