--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -13,6 +13,7 @@
        app:cropBorderCornerColor="@color/purple_500"
        app:cropBorderLineThickness="0.1px"
        app:cropGuidelines="off"
+       app:cropScaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/crop_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
@@ -64,15 +65,15 @@
 
       <ImageView
           android:id="@+id/rotate_left"
-          android:layout_width="27dp"
-          android:layout_height="19dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
           android:src="@drawable/ic_rotate_left"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toStartOf="@id/crop"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintVertical_bias="0.6" />
+          />
 
 
    </androidx.constraintlayout.widget.ConstraintLayout>
