--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -7,7 +7,6 @@
     android:layout_height="280dp"
     android:padding="20dp"
     app:cardCornerRadius="8dp"
-
     app:cardUseCompatPadding="true"
     app:strokeColor="@color/purple_200"
     app:strokeWidth="1dip">
@@ -24,7 +23,6 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/t"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +47,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
             android:padding="10dp"
-            >
+            android:contentDescription="@string/delete_page_button">
 
         </ImageButton>
 
@@ -66,6 +64,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0"
            android:padding="5dp"
+            android:contentDescription="@string/rotating_right_button"
             >
 
         </ImageButton>
@@ -75,7 +74,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:text="6"
             android:padding="10dp"
             android:textColor="@color/white"
             android:textSize="20sp"
