--- a/app/src/main/res/layout/scan_card_item.xml
+++ b/app/src/main/res/layout/scan_card_item.xml
@@ -31,7 +31,6 @@
                 android:id="@+id/scan_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="work 12"
                 android:textColor="@color/purple_700"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/scan_date"
@@ -46,7 +45,6 @@
                 android:id="@+id/scan_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="31/2/1990"
                 android:textColor="@color/purple_200"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -59,10 +57,10 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/scan_img"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
@@ -91,7 +89,8 @@
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.85">
+            app:layout_constraintVertical_bias="0.85"
+            android:contentDescription="@string/delete_scan_button">
 
         </ImageButton>
 
@@ -106,7 +105,9 @@
             app:layout_constraintHorizontal_bias="0.08"
             app:layout_constraintStart_toEndOf="@id/delete_scan"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.85">
+            app:layout_constraintVertical_bias="0.85"
+            android:contentDescription="@string/share_scan_button"
+            >
 
         </ImageButton>
 
