--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -19,7 +19,6 @@
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="image preview"
-android:background="@color/purple_200"
        />
 
    <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +30,9 @@ android:background="@color/purple_200"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintVertical_bias="1.0">
+       app:layout_constraintVertical_bias="1.0"
+       android:background="@color/purple_transparent"
+       >
 
       <ImageButton
           android:id="@+id/confirm_crop"
