--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layout"
     tools:context=".MainActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/main_actions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -36,12 +40,13 @@
             android:id="@+id/go_to_scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_green"
+            android:background="@drawable/round_scanner_background"
             android:src="@drawable/ic_scanner2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/gallery"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/go_to_scan" />
 
         <ImageButton
             android:id="@+id/gallery"
@@ -53,7 +58,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/go_to_scan"
             app:layout_constraintStart_toEndOf="@+id/alphabet_sort"
-           />
+            android:contentDescription="@string/choose_photos"
+            />
 
 
         <ImageButton
@@ -66,7 +72,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/gallery"
             app:layout_constraintStart_toEndOf="@+id/date_sort"
-             />
+            android:contentDescription="@string/sort_alphabetically" />
 
         <ImageButton
             android:id="@+id/date_sort"
@@ -78,7 +84,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/alphabet_sort"
             app:layout_constraintStart_toStartOf="parent"
-             />
+            android:contentDescription="@string/sort_by_date"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
